# jumpcloud-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mcp  Dockerfile.prometheus  alertmanager.yml  docker-compose.yaml  prometheus-alerts.yml  prometheus-recording-rules.yml  prometheus.yml  pyproject.toml
src/jumpcloud_mcp/: main.py  mcp_server.py
src/jumpcloud_mcp/api/v1/: router.py
src/jumpcloud_mcp/api/v1/endpoints/: aggregations.py  health.py
src/jumpcloud_mcp/core/: client.py  config.py  logging.py
src/jumpcloud_mcp/metrics/: collector.py  server.py
src/jumpcloud_mcp/utils/: helpers.py
